# threadbare

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
include/: job.hpp  pod.hpp  prng.hpp
src/: job.cpp  main.cpp
test/: CMakeLists.txt  tests.cpp
